🐛 fix: fix the bug of no spacing between code blocks

--- a/src/app/(article)/posts/[id]/shiki.css
+++ b/src/app/(article)/posts/[id]/shiki.css
@@ -182,3 +182,12 @@ code .line:not(:last-child)::after {
   bottom: 0;
   border-left: 1px solid rgba(100, 120, 130, 0.6);
 }
+
+code {
+  white-space: pre-wrap; /* 开启软换行 */
+}
+
+/* 定义代码块之间的间距 */
+.code-block-spacing {
+  margin-bottom: 20px;
+}
